--- a/androidUtil/build.gradle
+++ b/androidUtil/build.gradle
@@ -4,10 +4,10 @@ apply plugin: 'kotlin-kapt'
 
 
 android {
-    compileSdkVersion 31
+    compileSdkVersion 32
 
-    dataBinding {
-        enabled = true
+    buildFeatures {
+        dataBinding = true
     }
 
     sourceSets {
@@ -22,23 +22,21 @@ android {
 }
 
 dependencies {
-    testImplementation "junit:junit:4.13"
+    testImplementation "junit:junit:4.13.2"
 
-    api 'androidx.appcompat:appcompat:1.4.1'
-    api 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'androidx.appcompat:appcompat:1.4.2'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     api 'androidx.cardview:cardview:1.0.0'
-    api 'com.google.android.material:material:1.7.0-alpha01'
     // RxJava 2
-    api 'io.reactivex.rxjava2:rxandroid:2.0.2'
+    api 'io.reactivex.rxjava2:rxandroid:2.1.0'
     api 'io.reactivex.rxjava2:rxjava:2.2.9'
     //retrofit 2
-    api 'com.squareup.retrofit2:retrofit:2.3.0'
-    api 'com.squareup.retrofit2:converter-gson:2.3.0'
+    api 'com.squareup.retrofit2:retrofit:2.9.0'
+    api 'com.squareup.retrofit2:converter-gson:2.9.0'
     api 'com.squareup.retrofit2:adapter-rxjava2:2.3.0'
     api 'com.squareup.okhttp3:logging-interceptor:3.9.0'
-    api 'com.jakewharton.timber:timber:4.6.0'
+    api 'com.jakewharton.timber:timber:4.7.1'
     api 'com.github.CymChad:BaseRecyclerViewAdapterHelper:3.0.4'
-    api "org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.7.0"
     api files('libs/mina-core-2.0.19.jar')
     implementation 'org.slf4j:slf4j-api:1.7.32'
 
@@ -46,11 +44,11 @@ dependencies {
     api "androidx.room:room-ktx:2.4.2"
     kapt "androidx.room:room-compiler:2.4.2"
 
-    api "androidx.navigation:navigation-fragment-ktx:2.4.2"
-    api "androidx.navigation:navigation-ui-ktx:2.4.2"
+    api "androidx.navigation:navigation-fragment-ktx:2.5.0"
+    api "androidx.navigation:navigation-ui-ktx:2.5.0"
     // https://mvnrepository.com/artifact/org.jooq/joor-java-8
     api group: 'org.jooq', name: 'joor-java-8', version: '0.9.7'
-    api group: 'org.apache.commons', name: 'commons-collections4', version: '4.0'
+    api group: 'org.apache.commons', name: 'commons-collections4', version: '4.1'
     api "androidx.paging:paging-runtime-ktx:3.1.1"
 }
 
