--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,5 @@
 apply plugin: 'com.android.application'
-
 apply plugin: 'kotlin-android'
-
 apply plugin: 'dagger.hilt.android.plugin'
 apply plugin: 'kotlin-kapt'
 apply plugin: 'kotlin-android-extensions'
@@ -9,7 +7,7 @@ apply plugin: 'kotlin-android-extensions'
 
 android {
     compileSdkVersion 31
-    buildToolsVersion "30.0.2"
+    buildToolsVersion "30.0.3"
     buildFeatures {
         viewBinding = true
     }
@@ -19,7 +17,7 @@ android {
     defaultConfig {
         applicationId "com.john.kot"
         minSdkVersion 24
-        targetSdkVersion 29
+        targetSdkVersion 30
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -41,38 +39,38 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'androidx.appcompat:appcompat:1.3.0'
+    implementation 'androidx.appcompat:appcompat:1.4.2'
 
 
     // Local Unit Tests
-    testImplementation "junit:junit:4.13"
-    testImplementation "com.google.truth:truth:1.0.1"
-    androidTestImplementation "androidx.test:core:1.2.0"
-    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
+    testImplementation "junit:junit:4.13.2"
+    testImplementation "com.google.truth:truth:1.1.3"
+    androidTestImplementation "androidx.test:core:1.4.0"
+    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
 
 
     //mockk
-    testImplementation "io.mockk:mockk:1.12.0"
+    testImplementation "io.mockk:mockk:1.12.2"
     androidTestImplementation "io.mockk:mockk-android:1.12.0"
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
-    testImplementation "org.robolectric:robolectric:4.6.1"
-    testImplementation "org.robolectric:robolectric:4.7-SNAPSHOT"
+    testImplementation "org.robolectric:robolectric:4.8"
+    testImplementation "org.robolectric:robolectric:4.8"
     testImplementation 'org.hamcrest:hamcrest:2.2'
 
 
-    implementation 'com.google.android.material:material:1.5.0'
-    implementation 'androidx.lifecycle:lifecycle-common:2.4.1'
-    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.4.1"
-    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.4.1'
+    implementation 'com.google.android.material:material:1.6.1'
+    implementation 'androidx.lifecycle:lifecycle-common:2.5.0'
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.5.0"
+    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.5.0'
 
 
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.2'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
 
     implementation 'com.blankj:utilcode:1.22.10'
     api project(path: ':androidUtil')
 //    api("com.android:util:1.1.1")
-    implementation("com.squareup.okhttp3:okhttp:4.1.0")
+    implementation 'com.squareup.okhttp3:okhttp:4.9.3'
     implementation 'androidx.viewpager2:viewpager2:1.0.0'
     implementation 'com.contrarywind:Android-PickerView:4.1.9'
     implementation 'com.tencent.mm.opensdk:wechat-sdk-android-without-mta:5.3.1'
