--- a/androidUtil/build.gradle
+++ b/androidUtil/build.gradle
@@ -26,6 +26,8 @@ dependencies {
 
     implementation 'androidx.appcompat:appcompat:1.4.2'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'com.github.CymChad:BaseRecyclerViewAdapterHelper:3.0.4'
+
     api 'androidx.cardview:cardview:1.0.0'
     // RxJava 2
     api 'io.reactivex.rxjava2:rxandroid:2.1.0'
@@ -36,7 +38,6 @@ dependencies {
     api 'com.squareup.retrofit2:adapter-rxjava2:2.3.0'
     api 'com.squareup.okhttp3:logging-interceptor:3.9.0'
     api 'com.jakewharton.timber:timber:4.7.1'
-    api 'com.github.CymChad:BaseRecyclerViewAdapterHelper:3.0.4'
     api files('libs/mina-core-2.0.19.jar')
     implementation 'org.slf4j:slf4j-api:1.7.32'
 
