--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,7 +39,6 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'androidx.appcompat:appcompat:1.4.2'
 
 
     // Local Unit Tests
@@ -55,26 +54,23 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
     testImplementation "org.robolectric:robolectric:4.8"
-    testImplementation "org.robolectric:robolectric:4.8"
     testImplementation 'org.hamcrest:hamcrest:2.2'
 
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    implementation 'androidx.appcompat:appcompat:1.4.2'
+    implementation 'com.github.CymChad:BaseRecyclerViewAdapterHelper:3.0.4'
 
-    implementation 'com.google.android.material:material:1.6.1'
+//    implementation 'com.google.android.material:material:1.6.1'
     implementation 'androidx.lifecycle:lifecycle-common:2.5.0'
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.5.0"
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.5.0'
 
-
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-
-    implementation 'com.blankj:utilcode:1.22.10'
     api project(path: ':androidUtil')
 //    api("com.android:util:1.1.1")
     implementation 'com.squareup.okhttp3:okhttp:4.9.3'
     implementation 'androidx.viewpager2:viewpager2:1.0.0'
-    implementation 'com.contrarywind:Android-PickerView:4.1.9'
-    implementation 'com.tencent.mm.opensdk:wechat-sdk-android-without-mta:5.3.1'
-    implementation 'com.permissionx.guolindev:permissionx:1.3.0'
+//    implementation 'com.tencent.mm.opensdk:wechat-sdk-android-without-mta:5.3.1'
+//    implementation 'com.permissionx.guolindev:permissionx:1.3.0'
 
     //hilt
     implementation "com.google.dagger:hilt-android:2.40"
