--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,9 @@
         android:supportsRtl="true"
         android:theme="@style/HomeTheme">
         <activity
+            android:name=".p16MainScopeActivity"
+            android:exported="false" />
+        <activity
             android:name=".tool.lbs.LBSFirebaseActivity"
             android:exported="true">
             <intent-filter>
@@ -21,8 +24,7 @@
         </activity>
         <activity
             android:name=".coroutine.CoroutinesActivity"
-            android:exported="true">
-        </activity>
+            android:exported="true"></activity>
         <activity
             android:name=".ui.fragment.TabFragmentActivity"
             android:label="@string/title_activity_tab_fragment"
@@ -49,7 +51,7 @@
         <activity android:name=".tool.audio.AudioRecordActivity" />
         <activity android:name=".mvvm.fragment.MvvMFragmentActivity" />
         <activity android:name=".tool.rx.RxJavaActivity" />
-        <activity android:name=".tool.wechat.Activity.LoginNewActivity" />
+        <activity android:name=".tool.wechat.activity.LoginNewActivity" />
         <activity android:name=".tool.SharedPreferencesActivity" />
         <activity android:name=".ui.scroll.ScrollViewActivity" />
         <activity android:name=".ui.dbdraw.DatabindingDrawableActivity" />
@@ -69,7 +71,7 @@
         <activity
             android:name=".tool.location.GpsActivity"
             android:exported="true"
-            android:launchMode="singleTop"></activity>
+            android:launchMode="singleTop" />
         <activity android:name=".tool.image.ImageHandleActivity" />
         <activity android:name=".tool.image.ScreenPhotoActivity" />
         <activity android:name=".tool.image.PhotoBasicsActivity" />
