--- a/build.gradle
+++ b/build.gradle
@@ -4,20 +4,14 @@ apply from: "config.gradle"
 buildscript {
     ext.kotlin_version = '1.5.21'
     repositories {
+//        jcenter()
         google()
         mavenCentral()
-        
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:7.0.4'
         classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.7.0'
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
-//        classpath 'com.jakewharton:butterknife-gradle-plugin:10.1.0'
-//        classpath 'org.greenrobot:greendao-gradle-plugin:3.2.2' // add plugin
         classpath 'com.google.dagger:hilt-android-gradle-plugin:2.39.1'
-
-
     }
 }
 
@@ -25,9 +19,7 @@ allprojects {
     repositories {
         google()
         mavenCentral()
-        jcenter()
         maven { url "https://jitpack.io" }
-//        maven { url "http://localhost:8081/repository/jhmaven/"}
         maven { url "https://oss.sonatype.org/content/repositories/snapshots" }
     }
 }
