--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,15 @@
         android:supportsRtl="true"
         android:theme="@style/HomeTheme">
         <activity
+            android:name=".RoundImageActivity"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
             android:name=".p16MainScopeActivity"
             android:exported="false" />
         <activity
@@ -24,7 +33,7 @@
         </activity>
         <activity
             android:name=".coroutine.CoroutinesActivity"
-            android:exported="true"></activity>
+            android:exported="true" />
         <activity
             android:name=".ui.fragment.TabFragmentActivity"
             android:label="@string/title_activity_tab_fragment"
