--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -39,7 +39,9 @@
             android:exported="true"></activity>
         <activity
             android:name=".ui.image.RoundImageActivity"
-            android:exported="true"></activity>
+            android:exported="true">
+
+        </activity>
         <activity
             android:name=".tool.lbs.LBSFirebaseActivity"
             android:exported="true" />
