--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,9 @@
     <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
 
+    <!--悬浮窗权限 -->
+    <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
+
     <application
         android:name=".MyApp"
         android:allowBackup="true"
@@ -28,11 +31,7 @@
         <activity
             android:name=".ui.image.XfermodesActivity"
             android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
         <activity
             android:name=".mvvm.livedata.LivedataStickActivity"
@@ -44,7 +43,13 @@
         </activity>
         <activity
             android:name=".tool.lbs.LBSFirebaseActivity"
-            android:exported="true" />
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
         <activity
             android:name=".coroutine.CoroutinesActivity"
             android:exported="true" />
@@ -110,6 +115,16 @@
         <activity android:name=".anim.ViewAnimActivity" />
         <activity android:name=".ui.MessageActivityFragment" />
         <activity android:name=".mvvm.scrap.StrapCheckActivity" />
+
+        <activity
+            android:name=".tool.lbs.GoogleTopUpActivity"
+            android:exported="true"
+            android:theme="@style/MyTransparent">
+            <intent-filter>
+                <action android:name="com.google.android.payments.standard" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
 
         <provider
             android:name=".CameraProvider"
