--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -44,11 +44,7 @@
         <activity
             android:name=".tool.lbs.LBSFirebaseActivity"
             android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
         <activity
             android:name=".coroutine.CoroutinesActivity"
@@ -105,15 +101,25 @@
         <activity android:name=".ui.ResultBleActivity" />
         <activity android:name=".skin.SkinStaticThemeActivity" />
         <activity android:name=".ui.GradientActivity" />
-        <activity android:name=".ui.MeasureLearnActivity"></activity>
-        <activity android:name=".ui.CircleProgressActivity" />
+        <activity android:name=".ui.MeasureLearnActivity">
+
+        </activity>
+        <activity android:name=".ui.CircleProgressActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
         <activity android:name=".ui.constraint.ConstraintPlaceholderActivity" />
         <activity android:name=".ui.constraint.Constraint1Activity" />
         <activity android:name=".elec.ElecActivity" />
         <activity android:name=".arch.recyclerview.MainActivity" />
         <activity android:name=".ui.ScrollPickerActivity" />
         <activity android:name=".anim.ViewAnimActivity" />
-        <activity android:name=".ui.MessageActivityFragment" />
+        <activity android:name=".ui.MessageActivityFragment">
+
+        </activity>
         <activity android:name=".mvvm.scrap.StrapCheckActivity" />
 
         <activity
