--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,22 +24,25 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
-        android:supportsRtl="true"
         android:theme="@style/HomeTheme">
         <activity
             android:name=".activity.ActivityD"
-            android:exported="true" />
+            android:exported="true"
+            android:launchMode="singleTask" />
+
         <activity
             android:name=".activity.ActivityC"
-            android:exported="true">
+            android:exported="true"
+            android:launchMode="singleTask">
+
+        </activity>
+
+        <activity android:name=".tool.PlayStoreActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-        <activity android:name=".tool.PlayStoreActivity">
-
         </activity>
         <activity
             android:name=".ui.image.XfermodesActivity"
