--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,20 +24,23 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:theme="@style/HomeTheme">
         <activity
+            android:name=".hilt.dn.HiltMainActivity"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
             android:name=".activity.ActivityD"
             android:exported="true"
             android:launchMode="singleTask" />
-
         <activity
             android:name=".activity.ActivityC"
             android:exported="true"
-            android:launchMode="singleTask">
-
-        </activity>
-
-        <activity android:name=".tool.PlayStoreActivity">
-
-        </activity>
+            android:launchMode="singleTask"></activity>
+        <activity android:name=".tool.PlayStoreActivity"></activity>
         <activity
             android:name=".ui.image.XfermodesActivity"
             android:exported="true" />
@@ -110,19 +113,13 @@
         <activity android:name=".ui.constraint.ConstraintPlaceholderActivity" />
         <activity android:name=".ui.constraint.Constraint1Activity" />
         <activity android:name=".elec.ElecActivity" />
-        <activity android:name=".arch.recyclerview.MainActivity" />
+        <activity android:name=".arch.recyclerview.MainActivityApp" />
         <activity android:name=".ui.ScrollPickerActivity" />
         <activity android:name=".anim.ViewAnimActivity" />
         <activity android:name=".ui.MessageActivityFragment" />
         <activity android:name=".mvvm.scrap.StrapCheckActivity" />
         <activity android:name=".hilt.HiltActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
-
         <activity android:name=".hilt.HiltSecondActivity" />
 
         <provider
