--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,14 +24,31 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:theme="@style/HomeTheme">
         <activity
-            android:name=".hilt.dn.HiltMainActivity"
+            android:name=".link.DeepLinkActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
+            <!-- for deep-link -->
+            <intent-filter>
+                <!-- 必须加否否无法响应点击链接的 Intent-->
+                <action android:name="android.intent.action.VIEW" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+
+                <category android:name="android.intent.category.BROWSABLE" />
+
+                <data
+                    android:host="topic"
+                    android:scheme="com.great.jon" />
+            </intent-filter>
         </activity>
+        <activity
+            android:name=".hilt.dn.HiltMainActivity"
+            android:exported="true"></activity>
         <activity
             android:name=".activity.ActivityD"
             android:exported="true"
@@ -39,8 +56,8 @@
         <activity
             android:name=".activity.ActivityC"
             android:exported="true"
-            android:launchMode="singleTask"></activity>
-        <activity android:name=".tool.PlayStoreActivity"></activity>
+            android:launchMode="singleTask" />
+        <activity android:name=".tool.PlayStoreActivity" />
         <activity
             android:name=".ui.image.XfermodesActivity"
             android:exported="true" />
@@ -118,8 +135,7 @@
         <activity android:name=".anim.ViewAnimActivity" />
         <activity android:name=".ui.MessageActivityFragment" />
         <activity android:name=".mvvm.scrap.StrapCheckActivity" />
-        <activity android:name=".hilt.HiltActivity">
-        </activity>
+        <activity android:name=".hilt.HiltActivity"></activity>
         <activity android:name=".hilt.HiltSecondActivity" />
 
         <provider
