--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -54,7 +54,9 @@
         <activity
             android:name=".activity.ActivityC"
             android:exported="true"
-            android:launchMode="singleTask" />
+            android:launchMode="singleTask">
+
+        </activity>
         <activity android:name=".tool.PlayStoreActivity" />
         <activity
             android:name=".ui.image.XfermodesActivity"
@@ -62,11 +64,7 @@
         <activity
             android:name=".mvvm.livedata.LivedataStickActivity"
             android:exported="true" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
         <activity
             android:name=".mvvm.livedata.LivedataStick02Activity"
@@ -147,7 +145,10 @@
         <activity android:name=".ui.constraint.Constraint1Activity" />
         <activity android:name="com.john.kot.ui.elec.ElecActivity" />
         <activity android:name=".arch.recyclerview.MainActivityApp">
-
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
         <activity android:name=".ui.ScrollPickerActivity" />
         <activity android:name=".anim.ViewAnimActivity" />
