--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,7 +7,6 @@
         android:required="true" />
 
     <uses-permission android:name="com.example.myapplicationn.CUSTOM_PERMISSION" />
-
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
@@ -16,9 +15,7 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
     <uses-permission android:name="android.permission.INTERNET" /> <!-- 悬浮窗权限 -->
-    <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
-
-    <!--  request for DANGEROUS_PERM permission to this application -->
+    <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" /> <!-- request for DANGEROUS_PERM permission to this application -->
     <uses-permission android:name="com.example.dangerousactivity.MY_DANG_PERM" />
 
     <application
@@ -28,6 +25,15 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:theme="@style/HomeTheme">
+        <activity
+            android:name=".fragment.FragmentTestActivity"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
         <activity
             android:name=".hilt.dn.HiltSecondActivity"
             android:exported="false" />
@@ -49,40 +55,26 @@
         </activity>
         <activity
             android:name=".hilt.dn.HiltMainActivity"
-            android:exported="true">
-
-        </activity>
+            android:exported="true"></activity>
         <activity
             android:name=".activity.ActivityD"
             android:exported="true"
-            android:launchMode="singleTask">
-
-        </activity>
+            android:launchMode="singleTask"></activity>
         <activity
             android:name=".activity.ActivityC"
             android:exported="true"
-            android:launchMode="singleTask">
-
-        </activity>
+            android:launchMode="singleTask"></activity>
         <activity android:name=".tool.GoogleTopUpActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
         <activity
             android:name=".ui.image.XfermodesActivity"
             android:exported="true" />
         <activity
             android:name=".mvvm.livedata.LivedataStickActivity"
-            android:exported="true">
-
-        </activity>
+            android:exported="true"></activity>
         <activity
             android:name=".mvvm.livedata.LivedataStick02Activity"
-            android:exported="true">
-
-        </activity>
+            android:exported="true"></activity>
         <activity
             android:name=".ui.image.RoundImageActivity"
             android:exported="true" />
@@ -91,9 +83,7 @@
             android:exported="true" />
         <activity
             android:name=".coroutine.CoroutinesActivity"
-            android:exported="true">
-
-        </activity>
+            android:exported="true"></activity>
         <activity
             android:name=".ui.fragment.TabFragmentActivity"
             android:label="@string/title_activity_tab_fragment"
@@ -108,15 +98,11 @@
         <activity android:name=".ui.FontActivity" />
         <activity android:name=".test.robolec.MyActivity" />
         <activity android:name=".viewgroup.ViewGroupActivity" />
-        <activity android:name=".tool.glide.lifecycle.GlideActivity">
-
-        </activity>
+        <activity android:name=".tool.glide.lifecycle.GlideActivity"></activity>
         <activity android:name=".mvvm.lifecycle.LifeCycleActivity" />
         <activity android:name=".mvvm.livedata.xiangxue.LiveData2Activity" />
         <activity android:name=".mvvm.livedata.xiangxue.LiveData1Activity" />
-        <activity android:name=".mvvm.dongnao.viewmodel.ViewModelShareActivity">
-
-        </activity>
+        <activity android:name=".mvvm.dongnao.viewmodel.ViewModelShareActivity"></activity>
         <activity android:name=".mvvm.dongnao.lifecycle.Step2Activity" />
         <activity android:name=".tool.rx.WriteRxjavaActivity" />
         <activity android:name=".net.OkhtttpActivity" />
@@ -132,9 +118,7 @@
         <activity android:name=".customview.StrapSleepActivity" />
         <activity android:name=".ui.viewpager.ScreenSlidePagerActivity" />
         <activity android:name=".ui.custom.CustomViewActivity" />
-        <activity android:name=".mvvm.viewmodel.ViewModelActivity">
-
-        </activity>
+        <activity android:name=".mvvm.viewmodel.ViewModelActivity"></activity>
         <activity android:name="com.john.kot.tool.time.TextClockActivity" />
         <activity android:name=".tool.screenshot.ScreenShortActivity" />
         <activity android:name=".permission.PermissionActivity" />
@@ -145,33 +129,23 @@
         <activity android:name=".tool.image.ImageHandleActivity" />
         <activity android:name=".tool.image.ScreenPhotoActivity" />
         <activity android:name=".tool.image.PhotoBasicsActivity" />
-        <activity android:name=".anim.TextViewBigActivity">
-
-        </activity>
+        <activity android:name=".anim.TextViewBigActivity"></activity>
         <activity android:name=".anim.MoveViewActivity" />
         <activity android:name=".anim.PropertyAnimActivity" />
         <activity android:name=".ui.ResultBleActivity" />
         <activity android:name="com.john.kot.ui.skin.SkinStaticThemeActivity" />
         <activity android:name=".ui.GradientActivity" />
-        <activity android:name=".ui.MeasureLearnActivity">
-
-        </activity>
+        <activity android:name=".ui.MeasureLearnActivity"></activity>
         <activity android:name=".ui.CircleProgressActivity" />
         <activity android:name=".ui.constraint.ConstraintPlaceholderActivity" />
         <activity android:name=".ui.constraint.Constraint1Activity" />
         <activity android:name="com.john.kot.ui.elec.ElecActivity" />
-        <activity android:name=".arch.recyclerview.MainActivityApp">
-
-        </activity>
+        <activity android:name=".arch.recyclerview.MainActivityApp"></activity>
         <activity android:name=".ui.ScrollPickerActivity" />
         <activity android:name=".anim.ViewAnimActivity" />
-        <activity android:name=".ui.MessageActivityFragment">
-
-        </activity>
+        <activity android:name=".ui.MessageActivityFragment"></activity>
         <activity android:name=".mvvm.scrap.StrapCheckActivity" />
-        <activity android:name=".hilt.me.HiltActivity">
-
-        </activity>
+        <activity android:name=".hilt.me.HiltActivity"></activity>
         <activity android:name=".hilt.me.HiltSecondActivity" />
 
         <provider
